# simshell

./: .gitignore  CMakeLists.txt  CenterComponents.cpp  CenterComponents.hpp  LeftComponents.cpp  LeftComponents.hpp  RightComponents.cpp  RightComponents.hpp  RightComponentsHolder.cpp  RightComponentsHolder.hpp  RootBar.cpp  RootBar.hpp  SimshellApp.cpp  SimshellApp.hpp  main.cpp  styles.css
components/: BrightnessSlider.cpp  BrightnessSlider.hpp
components/active_window/: ActiveWindowLabel.cpp  ActiveWindowLabel.hpp
components/datetime/: DateTimeButton.cpp  DateTimeButton.hpp
components/mpris/: MprisButton.cpp  MprisPage.cpp  MprisPage.hpp  MprisPopover.cpp  MprisPopover.hpp
components/power/: PowerMenuButton.cpp  PowerMenuButton.hpp  PowerPopover.cpp  PowerPopover.hpp
components/workspaces/: HyprlandWorkspaceButton.cpp  HyprlandWorkspaceButton.hpp  HyprlandWorkspaces.cpp  HyprlandWorkspaces.hpp
include/: CenterComponents.hpp  LeftComponents.hpp  OSD.hpp  RightComponents.hpp  RootBar.hpp
include/components/: BrightnessSlider.hpp
include/components/mpris/: MprisButton.hpp  MprisPage.hpp
include/components/power/: BrightnessSlider.hpp  PowerMenuButton.hpp  PowerPopover.hpp
include/components/workspaces/: HyprlandWorkspaceButton.hpp
include/services/battery/: BatteryDevice.hpp  BatteryService.hpp
include/services/hyprland/: HyprlandService.hpp
include/services/mpris/: MprisPlayer.hpp  MprisService.hpp
services/backlight/: BacklightDevice.cpp  BacklightDevice.hpp  BacklightService.cpp  BacklightService.hpp  BrightnessService.cpp  BrightnessService.hpp
services/hyprland/: HyprlandService.cpp  HyprlandService.hpp
services/mpris/: MprisPlayer.cpp  MprisPlayer.hpp  MprisService.cpp  MprisService.hpp
src/: CenterComponents.cpp  LeftComponents.cpp  OSD.cpp  RightComponents.cpp  RootBar.cpp  SimshellApp.cpp  main.cpp
src/components/: BrightnessSlider.cpp
src/components/active_window/: ActiveWindowLabel.cpp
src/components/datetime/: DateTimeButton.cpp
src/components/mpris/: MprisButton.cpp  MprisPage.cpp  MprisPopover.cpp
src/components/power/: BrightnessSlider.cpp  PowerMenuButton.cpp  PowerPopover.cpp
src/components/workspaces/: HyprlandWorkspaceButton.cpp  HyprlandWorkspaces.cpp
src/services/backlight/: BacklightDevice.cpp  BacklightService.cpp
src/services/battery/: BatteryDevice.cpp  BatteryService.cpp
src/services/hyprland/: HyprlandService.cpp
src/services/mpris/: MprisPlayer.cpp  MprisService.cpp
src/ui/osd/: BrightnessOSD.xml
src/ui/power/: PowerPopup.xml
